# shaku-rocket-example

./: Cargo.toml  README.md
src/: autofac.rs  main.rs
