[package]
name = "shaku-rocket-example"
version = "0.1.0"
authors = ["Mcat12 <newtoncat12@yahoo.com>"]
edition = "2018"

[dependencies]
shaku = "0.3.1"
shaku_derive = "0.3.1"
rocket = "0.4.2"

[patch.crates-io]
shaku = { path = "../shaku/shaku" }
shaku_internals = { path = "../shaku/shaku_internals" }
shaku_derive = { path = "../shaku/shaku_derive" }
