[package]
name = "shaku-rocket-example"
version = "0.1.0"
authors = ["Mcat12 <newtoncat12@yahoo.com>"]
edition = "2018"

[dependencies]
shaku = "0.3.1"
shaku_derive = "0.3.1"
shaku_rocket = "0.1.0"
rocket = "0.4.2"

[dev-dependencies]
mockall = "0.6.0"

[patch.crates-io]
shaku = { path = "../shaku/shaku" }
shaku_internals = { path = "../shaku/shaku_internals" }
shaku_derive = { path = "../shaku/shaku_derive" }
shaku_rocket = { path = "../shaku/shaku_rocket" }
